bug patches. Cart setup. Improvements on product cards

--- a/templates/admin_order_detail.html
+++ b/templates/admin_order_detail.html
@@ -47,7 +47,7 @@
                                     <td class="text-end">${{ '%.2f'|format(order.subtotal) }}</td>
                                 </tr>
                                 <tr>
-                                    <td colspan="4" class="text-end">Tax (10%):</td>
+                                    <td colspan="4" class="text-end">GST (10%):</td>
                                     <td class="text-end">${{ '%.2f'|format(order.tax) }}</td>
                                 </tr>
                                 <tr>
