--- a/templates/cart.html
+++ b/templates/cart.html
@@ -92,7 +92,7 @@
                     </div>
                     
                     <div class="d-flex justify-content-between mb-2">
-                        <span>Tax (10%):</span>
+                        <span>GST (10%):</span>
                         <span>${{ '%.2f'|format(tax) }}</span>
                     </div>
                     
