--- a/templates/order_confirmation.html
+++ b/templates/order_confirmation.html
@@ -71,7 +71,7 @@
                                     <span>${{ '%.2f'|format(order.subtotal) }}</span>
                                 </div>
                                 <div class="d-flex justify-content-between mb-1">
-                                    <span>Tax:</span>
+                                    <span>GST:</span>
                                     <span>${{ '%.2f'|format(order.tax) }}</span>
                                 </div>
                                 <div class="d-flex justify-content-between mb-2">
